Text color bubble menu implemented

--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@tiptap/extension-bold": "^2.8.0",
     "@tiptap/extension-bubble-menu": "^2.8.0",
     "@tiptap/extension-code-block-lowlight": "^2.8.0",
+    "@tiptap/extension-color": "^2.8.0",
     "@tiptap/extension-highlight": "^2.8.0",
     "@tiptap/extension-italic": "^2.8.0",
     "@tiptap/extension-link": "^2.8.0",
+    "@tiptap/extension-placeholder": "^2.8.0",
     "@tiptap/extension-strike": "^2.8.0",
     "@tiptap/extension-task-item": "^2.8.0",
     "@tiptap/extension-task-list": "^2.8.0",
+    "@tiptap/extension-text-style": "^2.8.0",
     "@tiptap/extension-underline": "^2.8.0",
     "@tiptap/pm": "^2.8.0",
     "@tiptap/react": "^2.8.0",
